--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,6 +154,10 @@ jobs:
         run: APPRAISAL=rails_7.1 task rspec
       - name: Run RSpec with Dry
         run: APPRAISAL=dry task rspec
+      - name: Run RSpec with Awesome Print
+        run: APPRAISAL=awesome_print task rspec
+      - name: Run RSpec with Amazing Print
+        run: APPRAISAL=amazing_print task rspec
       - name: Run RSpec with Rails 7.0
         run: APPRAISAL=rails_7.0 task rspec
       - name: Run RSpec with Rails 6.1
