--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -58,6 +58,7 @@ tasks:
   #   APPRAISAL=rails_6.1 task console
   #   APPRAISAL=rails_7.0 task console
   #   APPRAISAL=rails_7.1 task console
+  #   APPRAISAL=rails_7.2 task console
   #   task console
   #
   # NOTE: Setting `APPRAISAL` after `task console` does NOT work. Consider to open an issue.
@@ -381,6 +382,7 @@ tasks:
   #   APPRAISAL=rails_6.1 task playground
   #   APPRAISAL=rails_7.0 task playground
   #   APPRAISAL=rails_7.1 task playground
+  #   APPRAISAL=rails_7.2 task playground
   #   task playground
   #
   # NOTE: Setting `APPRAISAL` after `task playground` does NOT work. Consider to open an issue.
@@ -409,6 +411,7 @@ tasks:
   #   APPRAISAL=rails_6.1 task rspec
   #   APPRAISAL=rails_7.0 task rspec
   #   APPRAISAL=rails_7.1 task rspec
+  #   APPRAISAL=rails_7.2 task rspec
   #
   # NOTE: It is also possible to run specs only for git staged files.
   #   STAGED=true APPRAISAL=rails_7.0 task rspec
@@ -448,6 +451,9 @@ tasks:
       - task: rspec
         vars:
           APPRAISAL: amazing_print
+      - task: rspec
+        vars:
+          APPRAISAL: rails_7.2
       - task: rspec
         vars:
           APPRAISAL: rails_7.0
