--- a/docker/ruby_2.7/Dockerfile
+++ b/docker/ruby_2.7/Dockerfile
@@ -49,12 +49,14 @@ COPY . /gem
 
 ENV RUBY_ENGINE=ruby
 
+ENV RUBY_ENGINE_VERSION=2.7
+
 ##
 # NOTE: Every container has its own copy of `Gemfile`. This way a developer doesn't need to delete `Gemfile.lock` all the time when changing containers.
 # - https://docs.docker.com/engine/reference/builder/#env
 # - https://stackoverflow.com/questions/48863711/is-it-possible-to-override-gemfile-for-local-development
 #
-ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_VERSION}
+ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_ENGINE_VERSION}
 
 ##
 # NOTE: Installs `task`.
