chore(rubocop): use frozen_string_literal in every Ruby file

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,6 +70,14 @@ AllCops:
     #
     - lib/convenient_service/dependencies/**/*
 
+##
+# NOTE: Forces to use `# frozen_string_literal: true` in every Ruby file.
+# - https://docs.rubocop.org/rubocop/cops_style.html#stylefrozenstringliteralcomment
+#
+Style/FrozenStringLiteralComment:
+  Enabled: true
+  EnforcedStyle: always_true
+
 # MagicNumbers:
 #   Exclude:
 #     ##
