--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -217,6 +217,10 @@ tasks:
           RUBY_ENGINE_VERSION: 3.3
       - task: docker:build
         vars:
+          RUBY_ENGINE: ruby
+          RUBY_ENGINE_VERSION: 3.4
+      - task: docker:build
+        vars:
           RUBY_ENGINE: jruby
           RUBY_ENGINE_VERSION: 9.4
       - task: docker:build
