--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -71,6 +71,11 @@ AllCops:
     #
     - lib/convenient_service/dependencies/**/*
 
+    ##
+    # NOTE: Excludes timeout debug from linting.
+    #
+    - spec/support/timeout_debug.rb
+
 ##
 # NOTE: Forces to use `# frozen_string_literal: true` in every Ruby file.
 # - https://docs.rubocop.org/rubocop/cops_style.html#stylefrozenstringliteralcomment
