--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -159,6 +159,7 @@ tasks:
   #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.2
   #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.3
   #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.4
+  #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.5
   #   task docker:bash RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=9.4
   #   task docker:bash RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=22.3
   #
@@ -188,6 +189,7 @@ tasks:
   #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.2 task docker:build
   #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.3 task docker:build
   #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.4 task docker:build
+  #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.5 task docker:build
   #   RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=9.4 task docker:build
   #   RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=22.3 task docker:build
   #
